--- a/Toggl.Daneel/ViewControllers/SignupViewController.xib
+++ b/Toggl.Daneel/ViewControllers/SignupViewController.xib
@@ -15,7 +15,6 @@
                 <outlet property="ActivityIndicator" destination="sr9-nn-Soa" id="Dmt-Sp-QwP"/>
                 <outlet property="BottomToSafeAreaConstraint" destination="bfb-Jq-GK1" id="sVm-xC-3Yg"/>
                 <outlet property="CountryErrorLabel" destination="y8w-3g-aS2" id="aeE-xR-EYQ"/>
-                <outlet property="CountryNameLabel" destination="l34-dy-bVW" id="s2e-s3-Kvg"/>
                 <outlet property="CountrySelectionScreenWrapperView" destination="21q-HV-H3g" id="jsa-yu-6cO"/>
                 <outlet property="EmailAndPasswordErrorLabel" destination="bDJ-O5-Mgx" id="v11-D7-6zv"/>
                 <outlet property="EmailAndPasswordScreenWrapperView" destination="aHt-Ci-I5L" id="0qS-7U-rtq"/>
@@ -26,7 +25,7 @@
                 <outlet property="PasswordMaskingControl" destination="YwE-g4-e5R" id="ein-wT-pLs"/>
                 <outlet property="PasswordMaskingImageView" destination="5CI-nd-X9f" id="lDK-1x-2Hl"/>
                 <outlet property="PasswordTextField" destination="hea-Kc-GD2" id="Ope-Fv-L9K"/>
-                <outlet property="SelectCountryButton" destination="qwK-4F-gcX" id="jWt-Pg-dTk"/>
+                <outlet property="SelectCountryTextField" destination="D0r-eW-FOa" id="7ay-WX-Dib"/>
                 <outlet property="SignUpButton" destination="ZNF-C3-gXL" id="Ffs-WL-8DK"/>
                 <outlet property="SignUpWithEmailButton" destination="BeL-on-TZJ" id="Hb0-IP-JdN"/>
                 <outlet property="SignUpWithEmailTextField" destination="Snc-tS-Cts" id="1bX-F7-xKM"/>
@@ -284,11 +283,9 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="21q-HV-H3g">
                     <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                     <subviews>
-                        <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Incorrect email/password. Please try again." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C2p-4O-rMx">
-                            <rect key="frame" x="26" y="459" width="244" height="15"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="15" id="YiF-E7-lOZ"/>
-                            </constraints>
+                        <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Incorrect email/password. Please try again." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C2p-4O-rMx">
+                            <rect key="frame" x="68" y="273" width="244" height="15"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                             <color key="textColor" red="0.96862745100000003" green="0.25098039220000001" blue="0.28627450980000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
@@ -332,51 +329,52 @@
                                 <constraint firstItem="ZNF-C3-gXL" firstAttribute="leading" secondItem="pH2-xm-XVD" secondAttribute="leading" id="vGv-My-beI"/>
                             </constraints>
                         </view>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="USA" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l34-dy-bVW">
-                            <rect key="frame" x="46" y="384" width="34" height="21"/>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ph2-eu-WUq">
+                            <rect key="frame" x="0.0" y="420" width="40" height="40"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="21" id="mKg-Kh-QsO"/>
+                                <constraint firstAttribute="width" constant="40" id="FzA-xm-Dtm"/>
+                                <constraint firstAttribute="height" constant="40" id="beG-3d-yJc"/>
                             </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qwK-4F-gcX">
-                            <rect key="frame" x="117" y="379" width="105" height="30"/>
-                            <state key="normal" title="Select COuntry"/>
-                        </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ph2-eu-WUq">
-                            <rect key="frame" x="61" y="437" width="159" height="30"/>
-                            <state key="normal" title="TermAndServiceButton"/>
+                            <state key="normal" image="icCheckboxSquareUnchecked"/>
                         </button>
                         <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Incorrect email/password. Please try again." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y8w-3g-aS2">
-                            <rect key="frame" x="26" y="417" width="244" height="15"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="15" id="BOT-Xa-Kjp"/>
-                            </constraints>
+                            <rect key="frame" x="40" y="466" width="243.5" height="14.5"/>
                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                             <color key="textColor" red="0.96862745100000003" green="0.25098039220000001" blue="0.28627450980000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="D0r-eW-FOa" customClass="LoginTextField">
+                            <rect key="frame" x="46" y="16" width="258" height="56"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="56" id="zan-TX-hKc"/>
+                            </constraints>
+                            <nil key="textColor"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </textField>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="I agree to the Terms of Service and Privacy Policy" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dne-bR-stE">
+                            <rect key="frame" x="40" y="420" width="264" height="40"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                            <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
                     <color key="backgroundColor" red="0.98039215686274506" green="0.98431372549019602" blue="0.9882352941176471" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
-                        <constraint firstItem="y8w-3g-aS2" firstAttribute="leading" secondItem="21q-HV-H3g" secondAttribute="leading" constant="26" id="1Ir-an-eyr"/>
-                        <constraint firstItem="pH2-xm-XVD" firstAttribute="top" secondItem="Ph2-eu-WUq" secondAttribute="bottom" constant="25" id="31A-DS-rAt"/>
-                        <constraint firstItem="Ph2-eu-WUq" firstAttribute="leading" secondItem="21q-HV-H3g" secondAttribute="leading" constant="61" id="6e9-ky-ImJ"/>
-                        <constraint firstAttribute="trailing" secondItem="y8w-3g-aS2" secondAttribute="trailing" constant="50" id="AW1-LU-dP8"/>
-                        <constraint firstItem="l34-dy-bVW" firstAttribute="leading" secondItem="21q-HV-H3g" secondAttribute="leading" constant="46" id="ETF-ad-Py9"/>
-                        <constraint firstItem="y8w-3g-aS2" firstAttribute="top" secondItem="qwK-4F-gcX" secondAttribute="bottom" constant="8" symbolic="YES" id="HMe-aI-dHY"/>
-                        <constraint firstItem="y8w-3g-aS2" firstAttribute="leading" secondItem="C2p-4O-rMx" secondAttribute="leading" id="KSX-VO-9tx"/>
-                        <constraint firstItem="qwK-4F-gcX" firstAttribute="leading" secondItem="l34-dy-bVW" secondAttribute="trailing" constant="37" id="Vay-wI-Jq1"/>
-                        <constraint firstItem="y8w-3g-aS2" firstAttribute="trailing" secondItem="C2p-4O-rMx" secondAttribute="trailing" id="fna-TE-Czg"/>
+                        <constraint firstAttribute="trailing" secondItem="D0r-eW-FOa" secondAttribute="trailing" constant="16" id="7p6-IE-GCI"/>
+                        <constraint firstItem="D0r-eW-FOa" firstAttribute="leading" secondItem="21q-HV-H3g" secondAttribute="leading" constant="46" id="Jox-wj-T7s"/>
+                        <constraint firstItem="pH2-xm-XVD" firstAttribute="top" secondItem="Ph2-eu-WUq" secondAttribute="bottom" constant="32" id="Kya-GT-94I"/>
+                        <constraint firstItem="D0r-eW-FOa" firstAttribute="top" secondItem="21q-HV-H3g" secondAttribute="top" constant="16" id="UNl-dT-rUW"/>
+                        <constraint firstItem="Ph2-eu-WUq" firstAttribute="leading" secondItem="21q-HV-H3g" secondAttribute="leading" id="ekg-0U-caC"/>
+                        <constraint firstItem="dne-bR-stE" firstAttribute="bottom" secondItem="Ph2-eu-WUq" secondAttribute="bottom" id="mEI-ke-vIj"/>
+                        <constraint firstItem="y8w-3g-aS2" firstAttribute="leading" secondItem="dne-bR-stE" secondAttribute="leading" id="mEg-Gu-nRS"/>
+                        <constraint firstItem="y8w-3g-aS2" firstAttribute="top" secondItem="dne-bR-stE" secondAttribute="bottom" constant="6" id="pg0-sb-IsP"/>
+                        <constraint firstItem="dne-bR-stE" firstAttribute="leading" secondItem="Ph2-eu-WUq" secondAttribute="trailing" id="pkT-3o-5MB"/>
+                        <constraint firstAttribute="trailing" secondItem="dne-bR-stE" secondAttribute="trailing" constant="16" id="psv-ng-EnD"/>
                         <constraint firstAttribute="trailing" secondItem="pH2-xm-XVD" secondAttribute="trailing" constant="16" id="qnC-F4-nBv"/>
-                        <constraint firstItem="pH2-xm-XVD" firstAttribute="top" secondItem="C2p-4O-rMx" secondAttribute="bottom" constant="18" id="sG4-uQ-krx"/>
+                        <constraint firstItem="dne-bR-stE" firstAttribute="top" secondItem="Ph2-eu-WUq" secondAttribute="top" id="srz-TH-b7k"/>
                         <constraint firstItem="pH2-xm-XVD" firstAttribute="leading" secondItem="21q-HV-H3g" secondAttribute="leading" constant="16" id="tBq-ly-beP"/>
-                        <constraint firstItem="l34-dy-bVW" firstAttribute="centerY" secondItem="qwK-4F-gcX" secondAttribute="centerY" id="vBY-12-vlT"/>
-                        <constraint firstItem="Ph2-eu-WUq" firstAttribute="top" secondItem="qwK-4F-gcX" secondAttribute="bottom" constant="28" id="wDO-nc-Cjh"/>
                         <constraint firstAttribute="bottom" secondItem="pH2-xm-XVD" secondAttribute="bottom" constant="16" id="wqB-69-j9C"/>
-                        <constraint firstItem="Ph2-eu-WUq" firstAttribute="top" secondItem="l34-dy-bVW" secondAttribute="bottom" constant="32" id="zNY-FA-Gw3"/>
                     </constraints>
                 </view>
             </subviews>
@@ -400,11 +398,12 @@
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="aqp-41-XzD"/>
-            <point key="canvasLocation" x="453" y="97"/>
+            <point key="canvasLocation" x="452.80000000000001" y="96.251874062968525"/>
         </view>
     </objects>
     <resources>
         <image name="icAdd" width="10" height="10"/>
+        <image name="icCheckboxSquareUnchecked" width="14" height="14"/>
         <image name="icGoogleColored" width="18" height="18"/>
         <image name="icPasswordUnmasked" width="19" height="13"/>
     </resources>
